--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -122,8 +122,6 @@ With this in mind we can then rewrite \autoref{eq:equations of motion perpendicu
 As we have already mentioned, this shows that the motion of a solar sail receiving radiation orthogonal to itself is governed by an inverse square law. In particular, the sail will move as if it were orbiting a star with a mass less than the Sun.
 
 \subsection{Equations of motion for a solar sail: general case}
-<<<<<<< Updated upstream
-
 \begin{figure}
 	\centering
 	\includegraphics[scale=.4]{alpha}
@@ -131,10 +129,7 @@ As we have already mentioned, this shows that the motion of a solar sail receivi
 	\label{alpha}
 \end{figure}
 
-This, however, is only true if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction, as seen in Figure \ref{alpha}. We do not allow for full freedom of the sail, and assume that its normal vector remains in the plane that contains the radial vector and is orthogonal to the sail itself. Now, the force due to radiation pressure has two contributions. The incoming photons exert a force that is now proportional to the orthogonal projection of the sail onto the radial direction, therefore of \( IS\cos{\alpha}/c \). This force is in the radial direction. The emitted photons exert a force that has the same modulus, but given that the sail behaves like a mirror, they are emmited in the direction orthogonal to the radial direction, and so the force due to the outgoing radiation is proportional to \( {-\hat{\mathbf{e}}_{\theta}} \). So we have
-=======
-\autoref{eq:equations of motion perpendicular} only applies if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction. We do not allow for full freedom of the sail, and assume that its normal vector remains in the plane that contains the radial vector and is orthogonal to the sail itself. Now, the force due to radiation pressure has two contributions. The incoming photons exert a force that is now proportional to the orthogonal projection of the sail onto the radial direction, therefore of \( IS\cos{\alpha}/c \). This force is in the radial direction. The emitted photons exert a force that has the same modulus, but given that the sail behaves like a mirror, they are emmited in the direction orthogonal to the radial direction, and so the force due to the outgoing radiation is proportional to \( {-\hat{\mathbf{e}}_{\theta}} \). So we have
->>>>>>> Stashed changes
+\autoref{eq:equations of motion perpendicular} only applies if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction, as seen in Figure \ref{alpha}. We do not allow for full freedom of the sail, and assume that its normal vector remains in the plane that contains the radial vector and is orthogonal to the sail itself. Now, the force due to radiation pressure has two contributions. The incoming photons exert a force that is now proportional to the orthogonal projection of the sail onto the radial direction, therefore of \( IS\cos{\alpha}/c \). This force is in the radial direction. The emitted photons exert a force that has the same modulus, but given that the sail behaves like a mirror, they are emmited in the direction orthogonal to the radial direction, and so the force due to the outgoing radiation is proportional to \( {-\hat{\mathbf{e}}_{\theta}} \). So we have
 \begin{equation}
   \mathbf{F}_R(r) = \dfrac{2IS \cos{\alpha}}{c} ( \hat{\mathbf{e}}_{r} - \hat{\mathbf{e}}_{\theta})
 \end{equation}
@@ -207,9 +202,9 @@ We see then that in the conditions of the problem statement, it is not possible 
 All of this leads us to believe that there is not much else that can be done to improve the characteristics of the voyage in these conditions. In the next two sections we will explore two different methods to improve on the characteristics of the mission.
 
 \subsection{Numerical solution of the general equations of motion}
-jince the general equations for a solar sail (\autoref{eq:equations of motion general case}) could not be analitically determined, we resorted to numerical methods to understand the behavior of a solar sail without approximations. As is explained in \cite{tsu}, the approximation made in the two previous sections are reasonable, yet not without falt. In particular, \( \dot{v} \) can be up to \( 10 \% \) of the value of \( v_{\theta}^2/r \). Because of this, we deemed this more detailed analysis to be necessary. 
+Since the general equations for a solar sail (\autoref{eq:equations of motion general case} and 2.13) could not be analitically determined, we resorted to numerical methods to understand the behavior of a solar sail without approximations. As is explained in \cite{tsu}, the approximation made in the two previous sections are reasonable, yet not without falt. In particular, \( \dot{v} \) can be up to \( 10 \% \) of the value of \( v_{\theta}^2/r \). Because of this, we deemed this more detailed analysis to be necessary. 
 
-To obtain the numerical solutions, odeint, a numerical ODE solver part of the SciPy.integrate module was employed. The system of two second order ODEs was transformed into a set of four first order ODEs, by considering the two additional relationships \( v_r = \dot{r} \) and \( v_{\theta} = r \dot{\theta} \). Given initial conditions, the software then returns values for the position and velocity for a finite set of discrete time steps. The orbit can then be reconstructed from this data if a sufficiently small time step is used.
+To obtain the numerical solutions, odeint, a numerical ODE solver part of Python's SciPy.integrate module was employed. The system of two second order ODEs was transformed into a set of four first order ODEs, by considering the two additional relationships \( v_r = \dot{r} \) and \( v_{\theta} = r \dot{\theta} \). Given initial conditions, the software then returns values for the position and velocity for a finite set of discrete time steps. The orbit can then be reconstructed from this data if a sufficiently small time step is used.
 
  \autoref{fig:optimal angle simulation} shows the trajectory followed by the sail when launched with the optimal angle, as established in Section 3.1, \( \alpha = \SI{35.21}{\degree} \). Note that the trajectory of the sail is not tangent to the orbit of Mars at the point of intersection, as it was in \autoref{fig:logarithmic spiral}, nor is the trajectory is a logarithmic spiral.
 
@@ -226,8 +221,6 @@ The simulation also allows us to find a first approximation of the velocity with
 
 However, as pointed out in Section 3.2, the sail never intercepts Mars itself. The simulation does not take into account Mars' gravitational pull, but a simple calculation of its strength relative to the Sun's shows that it is virtually zero for all of the orbit.
  
-The simulation in  \autoref{fig:optimal angle simulation} has been run under the assumption that the initial radial velocity of the sail is nule. This idea, supported by litterature and flight plans of previous missions, can be explained arguing the sole effect of the escape velocity the sail has is that of counteracting Earth's pull.
-
 In a first attempt of reaching Mars from the initial proposed configuration and without the use of adjusting maneuvers, various simulations have been run with various sail shift angles in order to find a proper sail angle and flight plan. \autoref{fig:espirals} shows some representative results of such simulations. As it has been mentioned before, gravitational pull from Mars has not been taken into account when running the simulations, since it is not strong enough to have any noticeable effects on the trajectory. As can be seen, in a number of these sample orbits, the sail virtually intercepts Mars. This, however, comes at a large cost in terms of time, since it does so in an almost two year period, as opposed to the 250 days it takes to reach the orbit of Mars in the optimal case.
 
 Assuming the trajectories of Mars and the spacecraft are tangential in the first three plots in \autoref{fig:espirals} one gets relative speeds of \SI{-8,5}{km\cdot s^{-1}}, \SI{-3.5}{km\cdot s^{-1}}  and \SI{-4.7}{km\cdot s^{-1}}, which means the sail would reach Mars at a speed within the range for a safe landing.
@@ -252,7 +245,10 @@ So far it has been seen that, in the required conditions, it is hard to plot a c
 	\caption{Trajectory of the sail with the trajectory correcting maneuvres required to stabilize the orbis.The yellow dots show the places at which a sail angle shift takes place. The blue dot shows the sail at the time in intersects Mars' orbit. Axes in AU.}
 \end{figure}
 
-A possible way to solve this problem would be to change the orientation of the sail as a means to correct the velocity and trajectory of the sail. In \cite{xinos} a time profile for the sail angle is determined given a set of initial conditions. The complexity of the methods was too high to be applied in this situation, however, the characteristics of the solar sail in \cite{xinos}  Obviously, one must not forget that the orbit achieved is not the same as Mars one, but it is actually really close. Notice, moreover, that the last manoeuvre sets $\alpha=0$ something which will imply a resulting force characteristic of a central force, a bit different of the gravitational one because of the sun light orthogonal incidence. Calculations give a really close proximity between Mars and the craft within 5 years since the launching moment with initial conditions, and a relative speed of $2$km/s, something that will ensure a safe landing. Simulation also suggests another monoeuvre would be needed after some years of orbit if it was wanted to mantain it. Even though the aim of this approach was not to land on Mars but to orbit like it, since, changing initial positions in real life would assure the desired landing.
+A possible way to solve this problem would be to change the orientation of the sail as a means to correct the velocity and trajectory of the sail. In \cite{xinos} a time profile for the sail angle is determined given a set of initial conditions. The complexity of the methods was too high to be applied in this situation, however, the characteristics of the solar sail in \cite{xinos} where similar enough to the ones in the present case to serve as a reference point. The basic idea is to start the trip with the optimal sail angle, which is then increased and then progressively decreased until it reaches zero when the sail is ar Mars' orbit. The purpose behind this profile is to ensure that the sail arrives at the orbit of Mars' with the sail perpendicular to the incoming radiation (zero sail angle).
+
+
+Obviously, one must not forget that the orbit achieved is not the same as Mars one, but it is actually really close. Notice, moreover, that the last manoeuvre sets $\alpha=0$ something which will imply a resulting force characteristic of a central force, a bit different of the gravitational one because of the sun light orthogonal incidence. Calculations give a really close proximity between Mars and the craft within 5 years since the launching moment with initial conditions, and a relative speed of $2$km/s, something that will ensure a safe landing. Simulation also suggests another monoeuvre would be needed after some years of orbit if it was wanted to mantain it. Even though the aim of this approach was not to land on Mars but to orbit like it, since, changing initial positions in real life would assure the desired landing.
 
 Furthermore, it is required to know $\alpha(t)$ in order to design the flight plan represented in \autoref{fig:maniobres}. This is shown in \autoref{fig:escaleta}. Data of this manoeuvres is inspired once again in \cite{xinos}.
 
