--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -40,15 +40,9 @@
 
 \noindent \hrulefill \\
 \begin{abstract}
-<<<<<<< HEAD
 The aim of this report is to discuss the viability of a solar sail mission to Mars, in terms of payload and flight time. Results have been mainly obtained by building a model of the problem, ruled by the initial conditions and the forces acting on the space craft. Under some approximations, the model can be anallytically solved, but the complete set of differential equations had to be numerically solved and simulated. 
 
 Results show such a mission would be indeed feasible, and a distrubution of weight involving a payload of \SI{1000}{kg} is suggested, giving a reasonable flight time of between 290 and 460 days, depending on trajectory. Actual arrival to Mars has been found to be of an extreme complexity given the initial conditions, but different trajectories have been proposed to reach its orbit, or even passing close to it, as well as one accopling to it. A flight plan has been concluded for the latter, including necessary manoeuvers along the voyage. Relative velocities between the space craft and Mars have also been computed, finding values among the interval needed for a safe landing.
-=======
-The aim of this report is to discuss the viability of a solar sail mission to Mars, in terms of payload and flight time. Results have been mainly obtain by building a model of the problem, ruled by the initial conditions and the forces acting on the spacecraft. Under some approximations, the model can be anallytically solved, but the complete set of differential equations had to be numerically solved and simulated. 
-
-Results show such a mission would be indeed feasible, and a distrubution of weight involving a payload of \SI{1000}{kg} is suggested, giving a reasonable flight time of between 290 and 460 days, depending on trajectory. Actual arrival to Mars has been found to be uncomputable given the initial conditions, but different trajectories have been proposed to reach its orbit, or even passing close to it, as well as one accopling to it. A flight plan has been concluded for the latter, including necessary manoeuvers along the voyage. Relative velocities between the spacecraft and Mars have been computed, finding values among the interval needed for a safe landing.
->>>>>>> 25039f86446226c0da1e9f3d72e3edb18806e190
 
 \end{abstract}
 \hrulefill \\
@@ -295,13 +289,13 @@ On the other hand work done has also some points than in a certain way could be 
 	\item Best results in simulations regarding proximity to Mars are slightly greater than the optimal ones and than the ones in previous missions. 
 \end{itemize}
 \subsection{Future work}
-Different issues of this report could be of greater impact if deeper research was performed on them. Some of them are presented on the following lines.
+Different issues of this report could be of greater impact if deeper research were performed on them. Some of them are presented on the following lines.
 
-Once initial given conditions are fixed, and as it is shown that it is necessary to vary the pitch sail angle in order to perform an orbit coupling, it would be significantly interesting to compute analitically this angle as a function of time. Found this, one could design an accurate flight plan in order to aproach to Mars' orbit at the right instant to be pulled by the attraction force of the planet. In this way and more precisely, it is about optimizing not only the time flight but also the relative position of the spacecraft and Mars at the final moment. All of this could be done by using more complex numerical methods.
+Once initial conditions are set, it has been shown in Section 3.4 that it is necessary to vary the pitch sail angle in order to perform a coupling to Mars' orbit. It would be significantly interesting to compute analitically this angle as a function of time. Found this, one could design an accurate flight plan in order to aproach to Mars' orbit at the right instant to be pulled by the attraction force of the planet. In this way and more precisely, it is about optimizing not only the time flight but also the relative position of the spacecraft and Mars at the final moment. All of this could be done by using more complex numerical methods.
 
-Research done proves solar sailing to be a valid method in order to perform such a mission to Mars. Nevertheless, it also shows that different missions could be performed with this propelling system as a substitute of fuel. These include among others, orbits exploration, launching of space probes and interplanetary missions. When it is about landing on planets maybe, since no deep research has been done on fuel-based landing methods, solar sails are not the optimal way to do it. Indeed they must be provided with sophisticated systems so that they are allowed to change their trajectories, while with some other propulsion method this would be easier. But as it has been said, solar sailing turns out to be an optimal option to perform interplanetary flights.
+Research done proves solar sailing to be a valid method in order to perform such a mission to Mars. Nevertheless, it also shows that different missions could be performed with this propelling system as a substitute of fuel. These includes, among others, orbits exploration, launch of space probes and interplanetary missions. When it is about landing on planets maybe, since no deep research has been done on fuel-based landing methods, solar sails may not the optimal way to do it. Indeed they must be provided with sophisticated systems so that they are allowed to change their trajectories, while with some other propulsion method this would be easier. 
 
-It would be of a great importance to develop this kind of systems in a bigger scale. This will enable not only higher speeds but also, perhaps, the possibility of having manned spacecrafts based on solar sails.
+It would be of a great importance to develop this kind of systems in a bigger scale. Regarding greater distances, solar sailing is obviously an excellent option from the energetic point of view and, moreover, after this first approach seems to be also a suitable option to perform interstellar flights. In addition, bigger dimensions will enable not only higher speeds but also, perhaps, the possibility of having manned spacecrafts based on solar sails.
 \clearpage
 
 \begin{btSect}{UphysicscNotes}
